atualizacoes para o repositorio reroku

--- a/src/main/resources/templates/vendas/relatorioVendas.html
+++ b/src/main/resources/templates/vendas/relatorioVendas.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br"
+      xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Relatorio de Vendas</title>
 </head>
 <body>
+<h1>Você esta autenticado.</h1>
+
+<button class="button" type="submit"><a href="/logout">Logout</a></button>
 
 </body>
 </html>
