configuracoes dev e prod

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,7 +26,7 @@
 <!-- start: page -->
 <section class="body-sign">
     <div class="center-sign">
-        <a href="/" class="logo pull-left">
+        <a href="wwww.habitten.com.br" class="logo pull-left">
             <img src="assets/images/habitten/LogoHabitten.png" height="54" alt="Habitten Loteamentos"/>
         </a>
 
